# safox-browser

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.6cfd360  README.md
Core/: HistoryModel.cpp  HistoryModel.h  JsonSettings.cpp  JsonSettings.h  Utils.cpp  Utils.h
Doc/backend/: about_connection.md  ad_block.md  class_structure.txt  core_v1.txt  download.md  history.txt  icon_cache.md  main.md  scheduler.md  scheduler.txt  service.md  setting.txt  unit_test.md  unit_test.txt
FolkTell/FolkTell/: .folktell.db  .folktell.db-journal  .gitignore  CMakeLists.txt  browserwindow.cpp  browserwindow.h  browserwindow.ui  main.cpp  mainapplication.cpp  mainmenu.cpp  mainmenu.h  pageview.cpp  pageview.h  pageview.ui  qtsingleapplication.cpp  toolbar.cpp  toolbar.h
FolkTell/FolkTell/src/: BookmarkModel.cpp  BookmarkModel.h  bookmarkmodel.cpp  browser.cpp  browserwindow.cpp  browserwindow.h  browserwindow.ui  icon.qrc  main.cpp  mainapplication.h  mainmenu.h  qtsingleapplication.h  toolbar.cpp
FolkTell/FolkTell/unit_test/: main.cpp
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/FolkTell_autogen/: deps  mocs_compilation.cpp
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
FolkTell/build-FolkTell-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/FolkTell_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
FolkTell/build-FolkTell-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
FolkTell/build-FolkTell-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
FolkTell/build-FolkTell-Qt_6_2_4_for_macOS-Debug/FolkTell_autogen/: deps  mocs_compilation.cpp
FolkTell/build-FolkTell-Qt_6_2_4_for_macOS_qt_qt6-Debug/: qtcsettings.cmake
FolkTell/build-FolkTell-unknown-Debug/: CMakeCache.txt
dependent_files/: easylist.txt
src/: bookmarkmodel.h  bookmarkwidget.cpp  bookmarkwidget.h  bookmarkwidget.ui  browser.cpp  browser.h  browserwindow.h  icon.qrc  main.cpp  mainapplication.cpp  mainapplication.h  mainmenu.h  mainmenu.ui  qtsingleapplication.cpp  qtsingleapplication.h
src/bookmark/: bookmarkmodel.cpp  bookmarkmodel.h  bookmarkwidget.cpp  bookmarkwidget.h
src/browserwindow/: browserwindow.cpp  browserwindow.h  browserwindow.ui
src/core/adblock/: adblock_request_interceptor.cpp  adblock_request_interceptor.h  default_request_interceptor.h
src/core/app/: mainapplication.cpp  mainapplication.h
src/core/bookmark/: bookmarkmodel.cpp  bookmarkmodel.h
src/core/browser/: browser.cpp  browser.h
src/core/dao/: basedao.cpp  basedao.h  bookmarkdao.cpp  bookmarkdao.h  bookmarkgroupdao.cpp  connections.cpp  connections.h  userdao.cpp  userdao.h
src/core/downloads/: downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h
src/core/history/: history.cpp  history.h  historydao.cpp  historydao.h  historyitem.h  historymodel.cpp  historymodel.h
src/core/icon/: iconmanager.cpp  iconmanager.h
src/core/qsingleapplication/: qtsingleapplication.cpp
src/core/searchengine/: searchengineMgr.cpp  searchengineMgr.h
src/core/service/: service.h
src/core/setting/: Config.cpp  Config.h  homepage.h
src/core/taskscheduler/: databasetaskscheduler.cpp  databasetaskscheduler.h
src/core/user/: usermodel.cpp  usermodel.h
src/core/useragent/: useragent.cpp  useragent.h
src/core/webengine/: webview.cpp  webview.h
src/dao/: basedao.cpp  basedao.h  bookmarkdao.cpp  bookmarkdao.h  bookmarkgroupdao.cpp  bookmarkgroupdao.h  userdao.cpp  userdao.h
src/downloads/: downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h
src/history/: history.cpp  historybar.cpp  historydao.cpp  historydao.h  historywidget.cpp  historywidget.h  historywidget.ui
src/lib/adblock/: adblock_request_interceptor.cpp  adblock_request_interceptor.h  default_request_interceptor.cpp
src/lib/bookmark/: bookmarkitem.cpp  bookmarkitem.h  bookmarkitem.ui  bookmarkmodel.cpp  bookmarkmodel.h  bookmarkwidget.cpp  bookmarkwidget.h  bookmarkwidget.ui
src/lib/dao/: basedao.cpp  basedao.h  bookmarkdao.cpp  bookmarkdao.h  bookmarkgroupdao.cpp  bookmarkgroupdao.h  connections.cpp  connections.h  userdao.cpp  userdao.h
src/lib/downloads/: downloaditem.h  downloadmanager.cpp  downloadmanager.h
src/lib/history/: history.cpp  history.h  historybar.cpp  historybar.h  historybar.ui  historydao.cpp  historydao.h  historymodel.h  historywidget.cpp  historywidget.h
src/lib/popupmenu/: popupmenu.cpp  popupmenu.h
src/lib/service/: myservice.h  service.h
src/lib/setting/: Config.cpp  Config.h  homepage.cpp  homepage.h
src/lib/tabwidget/: tabwidget.cpp  tabwidget.h  tabwidget.ui
src/lib/taskscheduler/: databasetaskscheduler.cpp  databasetaskscheduler.h
src/lib/toolbar/: toolbar.cpp  toolbar.h  toolbar.ui
src/lib/user/: usermodel.cpp  usermodel.h
src/lib/useragent/: useragent.h
src/lib/webengine/: webview.cpp  webview.h
src/setting/: Config.cpp  Config.h  config.cpp  homepage.cpp  homepage.h
src/toolbar/: toolbar.cpp  toolbar.h
src/ui/: app_win32.rc  icon.qrc
src/ui/bookmark/: addbookmarkwidget.cpp  addbookmarkwidget.h  addbookmarkwidget.ui  bookmarkbox.cpp  bookmarkbox.h  bookmarkitem.h  (+6 more)
src/user/: usermodel.cpp  usermodel.h
src/webengine/: webview.cpp
test/signal_slot_test/: counter.h
tests/: CMakeLists.txt  adblock_test.cpp  bookmark_test.cpp  bookmarkgroup_test.cpp  download_test.cpp  history_test.cpp  homepage_test.cpp  icon_test.cpp  service_test.cpp  user_test.cpp  useragent_test.cpp
tests/adblock/: interceptor_test.txt
tests/history/: scheduler_test.txt
tests/signal_slot_test/: counter_test.cpp
(+1156 files in other folders)
